--- a/style.css
+++ b/style.css
@@ -125,6 +125,6 @@ button:hover {
     margin: 8px 0px;
     letter-spacing: 1px;
     border-bottom: 1px solid rgba(29,27,27,0.233);
-    padding-bottom: ;
+    padding-bottom: 5px;
 
 }
